tests/fail/compile-fail-3.rs
///// thread sharing /////
use std::ptr;
use std::thread;

fn main() {
    let x = ptr::null_mut();

    thread::spawn(|| println!("{:?}", x));
    //~           ^^^^^^^^^^^^^^^^^^^^^^ `*mut _` cannot be shared between threads safely
}
